--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,17 @@
-projectVersion=4.0.1-SNAPSHOT
-grailsVersion=4.0.13
-fieldsVersion=3.0.0.RC1
-
-org.gradle.caching=true
-org.gradle.daemon=true
-org.gradle.parallel=true
-org.gradle.jvmargs=-Dfile.encoding=UTF-8 -Xmx1536M -XX:MaxMetaspaceSize=512M
+title=Grails Scaffolding Plugin
+authors=Graeme Rocher
+projectVersion=5.0.0.BUILD-SNAPSHOT
+projectDesc=Grails Scaffolding Plugin
+projectUrl=https://github.com/grails/grails-scaffolding
+githubSlug=grails/grails-scaffolding
+githubBranch=master
+developers=Graeme Rocher
+grailsVersion=5.0.0
+grailsDocsVersion=5.0.0
+groovyVersion=3.0.7
+gormVersion=7.1.0
+servletApiVersion=4.0.1
+spockVersion=2.0-groovy-3.0
+slf4jVersion=1.7.30
+# fieldsVersion=3.0.0.RC1
+hibernateCoreVersion=5.5.7.Final
