--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,11 @@
 .gradle/
 .idea/
 build/
+classes/
+*.db
 *.iml
-*.ipr
-# Ignore Gradle GUI config
-gradle-app.setting
+.project
+.settings
+bin
+.classpath
+.DS_Store
