--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 title=Grails Scaffolding Plugin
 authors=Graeme Rocher
-projectVersion=5.0.0.BUILD-SNAPSHOT
+projectVersion=5.0.0-SNAPSHOT
 projectDesc=Grails Scaffolding Plugin
 projectUrl=https://github.com/grails/grails-scaffolding
 githubSlug=grails/grails-scaffolding
@@ -13,5 +13,5 @@ gormVersion=7.1.0
 servletApiVersion=4.0.1
 spockVersion=2.0-groovy-3.0
 slf4jVersion=1.7.30
-# fieldsVersion=3.0.0.RC1
+fieldsVersion=5.0.0-SNAPSHOT
 hibernateCoreVersion=5.5.7.Final
