--- a/grails-plugin-scaffolding/build.gradle
+++ b/grails-plugin-scaffolding/build.gradle
@@ -2,8 +2,8 @@ dependencies {
     api "org.grails:grails-dependencies:$grailsVersion"
     api "org.grails:grails-web-boot:$grailsVersion"
     api "javax.servlet:javax.servlet-api:$servletApiVersion"
+    api "org.grails.plugins:fields:$fieldsVersion"
 
-//   api "org.grails.plugins:fields:$fieldsVersion"
     testImplementation "org.grails:grails-plugin-testing:$grailsVersion"
 
     console "org.grails:grails-console:$grailsVersion"
