--- a/gradle.properties
+++ b/gradle.properties
@@ -6,12 +6,13 @@ projectUrl=https://github.com/grails/grails-scaffolding
 githubSlug=grails/grails-scaffolding
 githubBranch=master
 developers=Graeme Rocher
-grailsVersion=5.0.0
-grailsDocsVersion=5.0.0
-groovyVersion=3.0.7
-gormVersion=7.1.0
+grailsVersion=5.1.10
+grailsDocsVersion=5.1.10
+grailsGspVersion=5.1.0
+grailsGradlePluginVersion=5.1.5
+groovyVersion=3.0.11
+gormVersion=7.2.1
 servletApiVersion=4.0.1
-spockVersion=2.0-groovy-3.0
-slf4jVersion=1.7.30
-fieldsVersion=5.0.0-SNAPSHOT
-hibernateCoreVersion=5.5.7.Final
+spockVersion=2.1-groovy-3.0
+slf4jVersion=1.7.36
+hibernateCoreVersion=5.6.10.Final
