--- a/grails-plugin-scaffolding/build.gradle
+++ b/grails-plugin-scaffolding/build.gradle
@@ -1,10 +1,9 @@
 dependencies {
-    api "org.grails:grails-dependencies:$grailsVersion"
+    api "org.grails:grails-core:$grailsVersion"
+    api "org.grails:grails-plugin-rest:$grailsVersion"
     api "org.grails:grails-web-boot:$grailsVersion"
+    api "org.grails:grails-web-gsp:$grailsGspVersion"
     api "javax.servlet:javax.servlet-api:$servletApiVersion"
-    api "org.grails.plugins:fields:$fieldsVersion"
 
     testImplementation "org.grails:grails-plugin-testing:$grailsVersion"
-
-    console "org.grails:grails-console:$grailsVersion"
 }
