Support Jakarta EE: migrate to jakarta.* namespace
Update dependencies

* jakarta.servlet to 6.0.0

* Groovy 4.0.10

* Spock 2.3-groovy-4.0

--- a/gradle.properties
+++ b/gradle.properties
@@ -6,13 +6,13 @@ projectUrl=https://github.com/grails/grails-scaffolding
 githubSlug=grails/grails-scaffolding
 githubBranch=master
 developers=Graeme Rocher
-grailsVersion=5.1.10
+grailsVersion=2023.0.0-SNAPSHOT
 grailsDocsVersion=5.1.10
-grailsGspVersion=5.1.0
-grailsGradlePluginVersion=5.1.5
-groovyVersion=3.0.11
-gormVersion=7.2.1
-servletApiVersion=4.0.1
-spockVersion=2.1-groovy-3.0
+grailsGspVersion=2023.0.0-SNAPSHOT
+grailsGradlePluginVersion=2023.0.0-SNAPSHOT
+groovyVersion=4.0.10
+gormVersion=2023.0.0-SNAPSHOT
+servletApiVersion=6.0.0
+spockVersion=2.3-groovy-4.0
 slf4jVersion=1.7.36
 hibernateCoreVersion=5.6.10.Final
