--- a/grails-plugin-scaffolding/build.gradle
+++ b/grails-plugin-scaffolding/build.gradle
@@ -2,8 +2,9 @@ dependencies {
     api "org.grails:grails-core:$grailsVersion"
     api "org.grails:grails-plugin-rest:$grailsVersion"
     api "org.grails:grails-web-boot:$grailsVersion"
+    compileOnly "org.grails:grails-boot:$grailsVersion"
     api "org.grails:grails-web-gsp:$grailsGspVersion"
-    api "javax.servlet:javax.servlet-api:$servletApiVersion"
+    api "jakarta.servlet:jakarta.servlet-api:$servletApiVersion"
 
-    testImplementation "org.grails:grails-plugin-testing:$grailsVersion"
+    // testImplementation "org.grails:grails-plugin-testing:$grailsVersion"
 }
