--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,9 @@
 buildscript {
     repositories {
         mavenLocal()
+        mavenCentral()
         maven { url "https://repo.grails.org/grails/core" }
+        maven { url 'https://repo.gradle.org/gradle/libs-releases' }
     }
     dependencies {
         classpath "org.grails:grails-gradle-plugin:$grailsGradlePluginVersion"
@@ -11,12 +13,13 @@ buildscript {
 
 repositories {
     mavenLocal()
+    mavenCentral()
     maven { url "https://repo.grails.org/grails/core" }
 }
 version project.projectVersion
 
 ext {
-    commonBuild = 'https://raw.githubusercontent.com/rainboyan/grails-common-build/master'
+    commonBuild = 'https://raw.githubusercontent.com/rainboyan/grails-common-build/23.0.x'
 }
 
 subprojects {
@@ -52,7 +55,7 @@ subprojects {
     }
 
     dependencies {
-        compile 'javax.annotation:javax.annotation-api:1.3.2'
+        implementation 'jakarta.annotation:jakarta.annotation-api:2.1.1'
     }
 }
 
