--- a/grails-scaffolding-core/build.gradle
+++ b/grails-scaffolding-core/build.gradle
@@ -1,14 +1,18 @@
 
 dependencies {
-    compile "org.grails:grails-core:$grailsVersion"
-    compile "org.grails:grails-datastore-core:$gormVersion"
-    compile "org.grails:grails-datastore-gorm-validation:$gormVersion"
-    compile "org.grails:grails-web-url-mappings:$grailsVersion"
-    compile 'javax.annotation:javax.annotation-api:1.3.2'
+    implementation "org.grails:grails-core:$grailsVersion"
+    implementation "org.grails:grails-datastore-core:$gormVersion", {
+        exclude group: "org.codehaus.groovy", module: "groovy"
+    }
+    implementation "org.grails:grails-datastore-gorm-validation:$gormVersion", {
+        exclude group: "org.codehaus.groovy", module: "groovy"
+    }
+    implementation "org.grails:grails-web-url-mappings:$grailsVersion"
+    implementation 'jakarta.annotation:jakarta.annotation-api:2.1.1'
     
-    testCompile "org.hibernate:hibernate-core:$hibernateCoreVersion"
-    testCompile "org.grails:grails-datastore-gorm-hibernate5:$gormVersion"
-    testCompile "org.spockframework:spock-core:$spockVersion"
+    // testCompile "org.hibernate:hibernate-core:$hibernateCoreVersion"
+    // testCompile "org.grails:grails-datastore-gorm-hibernate5:$gormVersion"
+    // testCompile "org.spockframework:spock-core:$spockVersion"
     // testCompile 'net.bytebuddy:byte-buddy:1.9.4'
     // testCompile 'org.objenesis:objenesis:3.0.1'
 }
