--- a/grails-plugin-scaffolding/build.gradle
+++ b/grails-plugin-scaffolding/build.gradle
@@ -1,4 +1,5 @@
 dependencies {
+    compileOnly "org.grails:grails-boot:$grailsVersion"
     api "org.grails:grails-core:$grailsVersion"
     api "org.grails:grails-plugin-rest:$grailsVersion"
     api "org.grails:grails-web-boot:$grailsVersion"
