--- a/grails-plugin-scaffolding/build.gradle
+++ b/grails-plugin-scaffolding/build.gradle
@@ -4,7 +4,7 @@ dependencies {
     api "org.grails:grails-plugin-rest:$grailsVersion"
     api "org.grails:grails-web-boot:$grailsVersion"
     api "org.grails:grails-web-gsp:$grailsGspVersion"
-    api "javax.servlet:javax.servlet-api:$servletApiVersion"
+    compileOnly "javax.servlet:javax.servlet-api:$servletApiVersion"
 
     testImplementation "org.grails:grails-plugin-testing:$grailsVersion"
 }
