--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 title=Grails Scaffolding Plugin
 authors=Graeme Rocher
-projectVersion=5.2.0-SNAPSHOT
+projectVersion=5.2.0
 projectDesc=Grails Scaffolding Plugin
 projectUrl=https://github.com/grails/grails-scaffolding
 githubSlug=grails/grails-scaffolding
