Upgrade to Grails 2023.0.0-M2
Upgrade to GORM 2023.0.0-M1

--- a/gradle.properties
+++ b/gradle.properties
@@ -6,12 +6,9 @@ projectUrl=https://github.com/grails/grails-scaffolding
 githubSlug=grails/grails-scaffolding
 githubBranch=master
 developers=Graeme Rocher
-grailsVersion=2023.0.0-SNAPSHOT
-grailsDocsVersion=5.1.10
-grailsGspVersion=2023.0.0-SNAPSHOT
-grailsGradlePluginVersion=2023.0.0-SNAPSHOT
+grailsVersion=2023.0.0-M2
 groovyVersion=4.0.10
-gormVersion=2023.0.0-SNAPSHOT
+gormVersion=2023.0.0-M1
 servletApiVersion=6.0.0
 spockVersion=2.3-groovy-4.0
 slf4jVersion=1.7.36
