--- a/grails-plugin-scaffolding/build.gradle
+++ b/grails-plugin-scaffolding/build.gradle
@@ -3,7 +3,7 @@ dependencies {
     api "org.grails:grails-plugin-rest:$grailsVersion"
     api "org.grails:grails-web-boot:$grailsVersion"
     compileOnly "org.grails:grails-boot:$grailsVersion"
-    api "org.grails:grails-web-gsp:$grailsGspVersion"
+    api "org.grails:grails-web-gsp:$grailsVersion"
     compileOnly "jakarta.servlet:jakarta.servlet-api:$servletApiVersion"
 
     // testImplementation "org.grails:grails-plugin-testing:$grailsVersion"
