--- a/gradle.properties
+++ b/gradle.properties
@@ -9,6 +9,7 @@ developers=Graeme Rocher
 grailsVersion=2023.0.0-M4
 groovyVersion=4.0.11
 gormVersion=2023.0.0-M2
+jakartaAnnotationVersion=2.1.1
 servletApiVersion=6.0.0
 spockVersion=2.3-groovy-4.0
 slf4jVersion=1.7.36
