--- a/grails-scaffolding-core/build.gradle
+++ b/grails-scaffolding-core/build.gradle
@@ -8,7 +8,7 @@ dependencies {
         exclude group: "org.codehaus.groovy", module: "groovy"
     }
     implementation "org.grails:grails-web-url-mappings:$grailsVersion"
-    implementation 'jakarta.annotation:jakarta.annotation-api:2.1.1'
+    compileOnly "jakarta.annotation:jakarta.annotation-api:$jakartaAnnotationVersion"
     
     // testCompile "org.hibernate:hibernate-core:$hibernateCoreVersion"
     // testCompile "org.grails:grails-datastore-gorm-hibernate5:$gormVersion"
