--- a/grails-scaffolding-core/build.gradle
+++ b/grails-scaffolding-core/build.gradle
@@ -1,18 +1,14 @@
 
 dependencies {
     implementation "org.grails:grails-core:$grailsVersion"
-    implementation "org.grails:grails-datastore-core:$gormVersion", {
-        exclude group: "org.codehaus.groovy", module: "groovy"
-    }
-    implementation "org.grails:grails-datastore-gorm-validation:$gormVersion", {
-        exclude group: "org.codehaus.groovy", module: "groovy"
-    }
+    implementation "org.grails:grails-datastore-core:$gormVersion"
+    implementation "org.grails:grails-datastore-gorm-validation:$gormVersion"
     implementation "org.grails:grails-web-url-mappings:$grailsVersion"
     compileOnly "jakarta.annotation:jakarta.annotation-api:$jakartaAnnotationVersion"
     
-    // testCompile "org.hibernate:hibernate-core:$hibernateCoreVersion"
-    // testCompile "org.grails:grails-datastore-gorm-hibernate5:$gormVersion"
-    // testCompile "org.spockframework:spock-core:$spockVersion"
-    // testCompile 'net.bytebuddy:byte-buddy:1.9.4'
-    // testCompile 'org.objenesis:objenesis:3.0.1'
+    testImplementation "org.hibernate:hibernate-core-jakarta:$hibernateCoreVersion"
+    testImplementation "org.grails:grails-datastore-gorm-hibernate5:$gormVersion"
+    testImplementation "org.spockframework:spock-core:$spockVersion"
+    testImplementation 'net.bytebuddy:byte-buddy:1.14.4'
+    testImplementation 'org.objenesis:objenesis:3.3'
 }
