--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 title=Grails Scaffolding Plugin
 authors=Graeme Rocher
-projectVersion=6.0.0-SNAPSHOT
+projectVersion=6.0.0-M4
 projectDesc=Grails Scaffolding Plugin
 projectUrl=https://github.com/grails/grails-scaffolding
 githubSlug=grails/grails-scaffolding
