--- a/grails-scaffolding-core/build.gradle
+++ b/grails-scaffolding-core/build.gradle
@@ -9,6 +9,5 @@ dependencies {
     testImplementation "org.hibernate:hibernate-core:$hibernateCoreVersion"
     testImplementation "org.grails:grails-datastore-gorm-hibernate5:$gormVersion"
     testImplementation "org.spockframework:spock-core:$spockVersion"
-    // testCompile 'net.bytebuddy:byte-buddy:1.9.4'
-    // testCompile 'org.objenesis:objenesis:3.0.1'
+    testImplementation 'org.objenesis:objenesis:3.3'
 }
