--- a/gradle.properties
+++ b/gradle.properties
@@ -1,18 +1,23 @@
-title=Grails Scaffolding Plugin
+title=Grace Scaffolding Plugin
 authors=Graeme Rocher
-projectVersion=5.0.0
-projectDesc=Grails Scaffolding Plugin
-projectUrl=https://github.com/grails/grails-scaffolding
-githubSlug=grails/grails-scaffolding
-githubBranch=master
-developers=Graeme Rocher
-grailsVersion=5.1.10
-grailsDocsVersion=5.1.10
-grailsGspVersion=5.1.0
-grailsGradlePluginVersion=5.1.5
+projectVersion=5.0.0-SNAPSHOT
+projectDesc=Grace Scaffolding Plugin
+projectUrl=https://github.com/graceframework/grace-scaffolding
+githubSlug=graceframework/grace-scaffolding
+githubBranch=5.0.x
+developers=Michael Yan
+grailsVersion=2021.0.0
+grailsGspVersion=2022.0.0
 groovyVersion=3.0.11
-gormVersion=7.2.1
-servletApiVersion=4.0.1
-spockVersion=2.1-groovy-3.0
-slf4jVersion=1.7.36
+gormVersion=2022.0.0
 hibernateCoreVersion=5.6.10.Final
+jansiVersion=1.18
+javaParserCoreVersion=3.15.14
+junitJupiterVersion=5.8.2
+junitJupiterPlatformVersion=1.8.2
+picocliVersion=4.6.3
+servletApiVersion=4.0.1
+slf4jVersion=1.7.36
+spockVersion=2.1-groovy-3.0
+springVersion=5.3.25
+springDependencyManagementPluginVersion=1.0.15.RELEASE
