--- a/gradle.properties
+++ b/gradle.properties
@@ -6,8 +6,8 @@ projectUrl=https://github.com/graceframework/grace-scaffolding
 githubSlug=graceframework/grace-scaffolding
 githubBranch=5.0.x
 developers=Michael Yan
-grailsVersion=2021.0.0
-grailsGspVersion=2022.0.0
+graceVersion=2022.0.0-SNAPSHOT
+graceGspVersion=2022.0.0
 groovyVersion=3.0.11
 gormVersion=2022.0.0
 hibernateCoreVersion=5.6.10.Final
