--- a/grace-scaffolding-core/build.gradle
+++ b/grace-scaffolding-core/build.gradle
@@ -1,9 +1,9 @@
 
 dependencies {
-    compile "org.graceframework:grace-core:$grailsVersion"
+    compile "org.graceframework:grace-core:$graceVersion"
     compile "org.graceframework:grace-datastore-core:$gormVersion"
     compile "org.graceframework:grace-datastore-gorm-validation:$gormVersion"
-    compile "org.graceframework:grace-web-url-mappings:$grailsVersion"
+    compile "org.graceframework:grace-web-url-mappings:$graceVersion"
     compile 'javax.annotation:javax.annotation-api:1.3.2'
     
     testCompile "org.hibernate:hibernate-core:$hibernateCoreVersion"
