--- a/publishing/mavenCentral.gradle
+++ b/publishing/mavenCentral.gradle
@@ -70,8 +70,8 @@ jar {
     manifest.mainAttributes(
             "Built-By": System.properties['user.name'],
             "Created-By": System.properties['java.vm.version'] + " (" + System.properties['java.vm.vendor'] + ")",
-            "Implementation-Title": "Grace",
-            "Implementation-Version": grailsVersion,
+            "Implementation-Title": "Grace Framework",
+            "Implementation-Version": graceVersion,
             "Implementation-Vendor": 'graceframework.org')
 }
 
