--- a/grace-plugin-scaffolding/build.gradle
+++ b/grace-plugin-scaffolding/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
     repositories {
-        mavenLocal()
+        // mavenLocal()
         mavenCentral()
         if (!isReleaseVersion) {
             maven { url "https://s01.oss.sonatype.org/content/repositories/snapshots/" }
