--- a/grace-plugin-scaffolding/build.gradle
+++ b/grace-plugin-scaffolding/build.gradle
@@ -24,7 +24,7 @@ dependencies {
     api "org.graceframework:grace-plugin-rest:$graceVersion"
     compileOnly "org.graceframework:grace-boot:$graceVersion"
     api "org.graceframework:grace-web-gsp:$graceGspVersion"
-    api "javax.servlet:javax.servlet-api:$servletApiVersion"
+    compileOnly "javax.servlet:javax.servlet-api:$servletApiVersion"
 
     // testImplementation "org.graceframework:grace-plugin-testing:$graceVersion"
 }
