--- a/grace-scaffolding-core/build.gradle
+++ b/grace-scaffolding-core/build.gradle
@@ -1,14 +1,14 @@
 
 dependencies {
-    compile "org.graceframework:grace-core:$graceVersion"
-    compile "org.graceframework:grace-datastore-core:$gormVersion"
-    compile "org.graceframework:grace-datastore-gorm-validation:$gormVersion"
-    compile "org.graceframework:grace-web-url-mappings:$graceVersion"
-    compile 'javax.annotation:javax.annotation-api:1.3.2'
+    implementation "org.graceframework:grace-core:$graceVersion"
+    implementation "org.graceframework:grace-datastore-core:$gormVersion"
+    implementation "org.graceframework:grace-datastore-gorm-validation:$gormVersion"
+    implementation "org.graceframework:grace-web-url-mappings:$graceVersion"
+    compileOnly 'javax.annotation:javax.annotation-api:1.3.2'
     
-    testCompile "org.hibernate:hibernate-core:$hibernateCoreVersion"
-    testCompile "org.graceframework:grace-datastore-gorm-hibernate5:$gormVersion"
-    testCompile "org.spockframework:spock-core:$spockVersion"
-    // testCompile 'net.bytebuddy:byte-buddy:1.9.4'
-    // testCompile 'org.objenesis:objenesis:3.0.1'
+    testImplementation "org.hibernate:hibernate-core:$hibernateCoreVersion"
+    testImplementation "org.graceframework:grace-datastore-gorm-hibernate5:$gormVersion"
+    testImplementation "org.spockframework:spock-core:$spockVersion"
+    // testImplementation 'net.bytebuddy:byte-buddy:1.9.4'
+    // testImplementation 'org.objenesis:objenesis:3.0.1'
 }
