--- a/grace-plugin-scaffolding/build.gradle
+++ b/grace-plugin-scaffolding/build.gradle
@@ -28,3 +28,9 @@ dependencies {
 
     // testImplementation "org.graceframework:grace-plugin-testing:$graceVersion"
 }
+
+jar {
+    enabled = true
+    archiveClassifier.set('')
+    includeEmptyDirs = false
+}
