--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 title=Grace Scaffolding Plugin
 authors=Graeme Rocher
-projectVersion=5.1.1
+projectVersion=5.1.1-SNAPSHOT
 projectDesc=Grace Scaffolding Plugin
 projectUrl=https://github.com/graceframework/grace-scaffolding
 githubSlug=graceframework/grace-scaffolding
