Grace: Bump version: 5.2.0-SNAPSHOT

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,11 +1,11 @@
-title=Grails Scaffolding Plugin
+title=Grace Scaffolding
 authors=Graeme Rocher
-projectVersion=5.2.0
-projectDesc=Grails Scaffolding Plugin
-projectUrl=https://github.com/grails/grails-scaffolding
-githubSlug=grails/grails-scaffolding
+projectVersion=5.2.0-SNAPSHOT
+projectDesc=Grace Scaffolding
+projectUrl=https://github.com/graceframework/grace-scaffolding
+githubSlug=graceframework/grace-scaffolding
 githubBranch=master
-developers=Graeme Rocher
+developers=Michael Yan
 grailsVersion=2022.1.2
 grailsGspVersion=2022.1.2
 groovyVersion=3.0.16
