--- a/grace-plugin-scaffolding/build.gradle
+++ b/grace-plugin-scaffolding/build.gradle
@@ -1,10 +1,10 @@
 dependencies {
-    compileOnly "org.grails:grails-boot:$grailsVersion"
-    api "org.grails:grails-core:$grailsVersion"
-    api "org.grails:grails-plugin-rest:$grailsVersion"
-    api "org.grails:grails-web-boot:$grailsVersion"
-    api "org.grails:grails-web-gsp:$grailsGspVersion"
+    compileOnly "org.graceframework:grace-boot:$graceVersion"
+    api "org.graceframework:grace-core:$graceVersion"
+    api "org.graceframework:grace-plugin-rest:$graceVersion"
+    api "org.graceframework:grace-web-boot:$graceVersion"
+    api "org.graceframework:grace-web-gsp:$graceGspVersion"
     compileOnly "javax.servlet:javax.servlet-api:$servletApiVersion"
 
-    testImplementation "org.grails:grails-plugin-testing:$grailsVersion"
+    testImplementation "org.graceframework:grace-plugin-testing:$graceVersion"
 }
