--- a/grace-scaffolding-core/build.gradle
+++ b/grace-scaffolding-core/build.gradle
@@ -1,13 +1,13 @@
 
 dependencies {
-    implementation "org.grails:grails-core:$grailsVersion"
-    implementation "org.grails:grails-datastore-core:$gormVersion"
-    implementation "org.grails:grails-datastore-gorm-validation:$gormVersion"
-    implementation "org.grails:grails-web-url-mappings:$grailsVersion"
+    implementation "org.graceframework:grace-core:$graceVersion"
+    implementation "org.graceframework:grace-datastore-core:$gormVersion"
+    implementation "org.graceframework:grace-datastore-gorm-validation:$gormVersion"
+    implementation "org.graceframework:grace-web-url-mappings:$graceVersion"
     implementation 'javax.annotation:javax.annotation-api:1.3.2'
     
     testImplementation "org.hibernate:hibernate-core:$hibernateCoreVersion"
-    testImplementation "org.grails:grails-datastore-gorm-hibernate5:$gormVersion"
+    testImplementation "org.graceframework:grace-datastore-gorm-hibernate5:$gormVersion"
     testImplementation "org.spockframework:spock-core:$spockVersion"
     // testCompile 'net.bytebuddy:byte-buddy:1.9.4'
     // testCompile 'org.objenesis:objenesis:3.0.1'
