--- a/gradle.properties
+++ b/gradle.properties
@@ -6,11 +6,17 @@ projectUrl=https://github.com/graceframework/grace-scaffolding
 githubSlug=graceframework/grace-scaffolding
 githubBranch=master
 developers=Michael Yan
-grailsVersion=2022.1.2
-grailsGspVersion=2022.1.2
+graceVersion=2022.1.2
+graceGspVersion=2022.1.2
 groovyVersion=3.0.16
 gormVersion=2022.2.0
+hibernateCoreVersion=5.6.15.Final
+jansiVersion=1.18
+javaParserCoreVersion=3.15.14
+junitJupiterVersion=5.8.2
+junitJupiterPlatformVersion=1.8.2
+picocliVersion=4.6.3
 servletApiVersion=4.0.1
 spockVersion=2.1-groovy-3.0
+springDependencyManagementPluginVersion=1.0.15.RELEASE
 slf4jVersion=1.7.36
-hibernateCoreVersion=5.6.10.Final
