Grace: update gradle build scripts
Fix plugin build

--- a/grace-plugin-scaffolding/build.gradle
+++ b/grace-plugin-scaffolding/build.gradle
@@ -8,3 +8,9 @@ dependencies {
 
     testImplementation "org.graceframework:grace-plugin-testing:$graceVersion"
 }
+
+jar {
+    enabled = true
+    archiveClassifier.set('')
+    includeEmptyDirs = false
+}
