--- a/gradle.properties
+++ b/gradle.properties
@@ -1,16 +1,22 @@
-title=Grails Scaffolding Plugin
+title=Grace Scaffolding
 authors=Graeme Rocher
 projectVersion=5.2.1-SNAPSHOT
-projectDesc=Grails Scaffolding Plugin
-projectUrl=https://github.com/grails/grails-scaffolding
-githubSlug=grails/grails-scaffolding
+projectDesc=Grace Scaffolding
+projectUrl=https://github.com/graceframework/grace-scaffolding
+githubSlug=graceframework/grace-scaffolding
 githubBranch=master
-developers=Graeme Rocher
-grailsVersion=2022.1.4
-grailsGspVersion=2022.1.3
-groovyVersion=3.0.17
-gormVersion=2022.2.1
+developers=Michael Yan
+graceVersion=2022.1.2
+graceGspVersion=2022.1.2
+groovyVersion=3.0.16
+gormVersion=2022.2.0
+hibernateCoreVersion=5.6.15.Final
+jansiVersion=1.18
+javaParserCoreVersion=3.15.14
+junitJupiterVersion=5.8.2
+junitJupiterPlatformVersion=1.8.2
+picocliVersion=4.6.3
 servletApiVersion=4.0.1
 spockVersion=2.1-groovy-3.0
+springDependencyManagementPluginVersion=1.0.15.RELEASE
 slf4jVersion=1.7.36
-hibernateCoreVersion=5.6.10.Final
