Upgrade to Grace 2022.2.0

--- a/grace-plugin-scaffolding/build.gradle
+++ b/grace-plugin-scaffolding/build.gradle
@@ -3,7 +3,7 @@ dependencies {
     api "org.graceframework:grace-core:$graceVersion"
     api "org.graceframework:grace-plugin-rest:$graceVersion"
     api "org.graceframework:grace-web-boot:$graceVersion"
-    api "org.graceframework:grace-web-gsp:$graceGspVersion"
+    api "org.graceframework:grace-web-gsp:$graceVersion"
     compileOnly "javax.servlet:javax.servlet-api:$servletApiVersion"
 
     testImplementation "org.graceframework:grace-plugin-testing:$graceVersion"
