--- a/grace-scaffolding-core/build.gradle
+++ b/grace-scaffolding-core/build.gradle
@@ -4,7 +4,7 @@ dependencies {
     implementation "org.graceframework:grace-datastore-core:$gormVersion"
     implementation "org.graceframework:grace-datastore-gorm-validation:$gormVersion"
     implementation "org.graceframework:grace-web-url-mappings:$graceVersion"
-    implementation 'javax.annotation:javax.annotation-api:1.3.2'
+    implementation 'jakarta.annotation:jakarta.annotation-api:2.1.1'
     
     testImplementation "org.hibernate:hibernate-core:$hibernateCoreVersion"
     testImplementation "org.graceframework:grace-datastore-gorm-hibernate5:$gormVersion"
