--- a/grace-scaffolding-core/build.gradle
+++ b/grace-scaffolding-core/build.gradle
@@ -6,7 +6,7 @@ dependencies {
     implementation "org.graceframework:grace-web-url-mappings:$graceVersion"
     implementation 'jakarta.annotation:jakarta.annotation-api:2.1.1'
     
-    testImplementation "org.hibernate:hibernate-core:$hibernateCoreVersion"
+    testImplementation "org.hibernate:hibernate-core-jakarta:$hibernateCoreVersion"
     testImplementation "org.graceframework:grace-datastore-gorm-hibernate5:$gormVersion"
     testImplementation "org.spockframework:spock-core:$spockVersion"
     // testCompile 'net.bytebuddy:byte-buddy:1.9.4'
