Remove WARN: Using deprecated '-debug' fallback for parameter name resolution
Compile the affected code with '-parameters' instead or avoid its introspection: org.grails.scaffolding.ScaffoldingBeanConfiguration

--- a/build.gradle
+++ b/build.gradle
@@ -116,6 +116,10 @@ subprojects { project->
             withSourcesJar()
         }
 
+        tasks.withType(GroovyCompile) {
+            options.compilerArgs << '-parameters'
+        }
+
         tasks.withType(Test) {
             useJUnitPlatform()
             testLogging {
