--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 title=Grace Scaffolding
 authors=Graeme Rocher
-projectVersion=6.0.0-SNAPSHOT
+projectVersion=6.0.0-M3
 projectDesc=Grace Scaffolding
 projectUrl=https://github.com/graceframework/grace-scaffolding
 githubSlug=graceframework/grace-scaffolding
