Set `archiveClassifier` with 'plugin'

--- a/grace-plugin-scaffolding/build.gradle
+++ b/grace-plugin-scaffolding/build.gradle
@@ -11,6 +11,6 @@ dependencies {
 
 jar {
     enabled = true
-    archiveClassifier.set('')
+    archiveClassifier.set('plugin')
     includeEmptyDirs = false
 }
