--- a/publishing/mavenCentral.gradle
+++ b/publishing/mavenCentral.gradle
@@ -36,6 +36,13 @@ publishing {
             }
             from components.java
 
+            afterEvaluate {
+                if (project.name.startsWith('grace-plugin')) {
+                    artifact source:"${sourceSets.main.groovy.outputDir}/META-INF/grails-plugin.xml",
+                        classifier:"plugin",
+                        extension:'xml'
+                }
+            }
             pom {
                 name = projectName
                 description = "Grace Scaffolding : $projectName"
