--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 title=Grace Scaffolding
 authors=Graeme Rocher
-projectVersion=5.2.6-SNAPSHOT
+projectVersion=5.2.6
 projectDesc=Grace Scaffolding
 projectUrl=https://github.com/graceframework/grace-scaffolding
 githubSlug=graceframework/grace-scaffolding
