--- a/gradle.properties
+++ b/gradle.properties
@@ -18,5 +18,5 @@ junitJupiterPlatformVersion=1.8.2
 picocliVersion=4.6.3
 servletApiVersion=6.0.0
 spockVersion=2.3-groovy-4.0
-springDependencyManagementPluginVersion=1.0.15.RELEASE
+springDependencyManagementPluginVersion=1.1.0
 slf4jVersion=2.0.7
