--- a/gradle.properties
+++ b/gradle.properties
@@ -8,7 +8,7 @@ githubBranch=master
 developers=Michael Yan
 graceVersion=2023.0.0-M7
 groovyVersion=4.0.21
-gormVersion=2023.0.0-M5
+gormVersion=2023.0.0-RC1
 hibernateCoreVersion=5.6.15.Final
 jakartaAnnotationVersion=2.1.1
 jansiVersion=1.18
