--- a/gradle.properties
+++ b/gradle.properties
@@ -8,7 +8,7 @@ githubBranch=master
 developers=Michael Yan
 graceVersion=2023.0.0-RC2
 groovyVersion=4.0.22
-gormVersion=2023.0.0-RC1
+gormVersion=2023.0.0
 hibernateCoreVersion=5.6.15.Final
 jakartaAnnotationVersion=2.1.1
 jansiVersion=1.18
