--- a/gradle.properties
+++ b/gradle.properties
@@ -6,7 +6,7 @@ projectUrl=https://github.com/graceframework/grace-scaffolding
 githubSlug=graceframework/grace-scaffolding
 githubBranch=master
 developers=Michael Yan
-graceVersion=2023.0.0-RC2
+graceVersion=2023.0.0
 groovyVersion=4.0.22
 gormVersion=2023.0.0
 hibernateCoreVersion=5.6.15.Final
