--- a/gradle.properties
+++ b/gradle.properties
@@ -8,7 +8,7 @@ githubBranch=master
 developers=Michael Yan
 graceVersion=2023.0.2
 groovyVersion=4.0.23
-gormVersion=2023.0.1
+gormVersion=2023.1.0-M1
 hibernateCoreVersion=5.6.15.Final
 jakartaAnnotationVersion=2.1.1
 jansiVersion=1.18
