--- a/grace-scaffolding-core/build.gradle
+++ b/grace-scaffolding-core/build.gradle
@@ -9,6 +9,6 @@ dependencies {
     testImplementation "org.hibernate:hibernate-core-jakarta:$hibernateCoreVersion"
     testImplementation "org.graceframework:grace-datastore-gorm-hibernate:$gormVersion"
     testImplementation "org.spockframework:spock-core:$spockVersion"
-    testImplementation 'net.bytebuddy:byte-buddy:1.14.4'
+    testImplementation "net.bytebuddy:byte-buddy:$byteBuddyVersion"
     testImplementation 'org.objenesis:objenesis:3.3'
 }
