--- a/gradle.properties
+++ b/gradle.properties
@@ -6,6 +6,7 @@ projectUrl=https://github.com/graceframework/grace-scaffolding
 githubSlug=graceframework/grace-scaffolding
 githubBranch=master
 developers=Michael Yan
+byteBuddyVersion=1.14.16
 graceVersion=2023.0.2
 groovyVersion=4.0.23
 gormVersion=2023.1.0-M1
