Upgrade to Objenesis 3.4
Closes gh-8

--- a/grace-scaffolding-core/build.gradle
+++ b/grace-scaffolding-core/build.gradle
@@ -10,5 +10,5 @@ dependencies {
     testImplementation "org.graceframework:grace-datastore-gorm-hibernate:$gormVersion"
     testImplementation "org.spockframework:spock-core:$spockVersion"
     testImplementation "net.bytebuddy:byte-buddy:$byteBuddyVersion"
-    testImplementation 'org.objenesis:objenesis:3.3'
+    testImplementation "org.objenesis:objenesis:$objenesisVersion"
 }
