--- a/gradle.properties
+++ b/gradle.properties
@@ -17,6 +17,7 @@ javaParserCoreVersion=3.26.2
 junitJupiterVersion=5.9.3
 junitJupiterPlatformVersion=1.9.3
 picocliVersion=4.6.3
+objenesisVersion = 3.4
 servletApiVersion=6.0.0
 spockVersion=2.3-groovy-4.0
 springDependencyManagementPluginVersion=1.1.6
