--- a/gradle.properties
+++ b/gradle.properties
@@ -7,7 +7,7 @@ githubSlug=graceframework/grace-scaffolding
 githubBranch=master
 developers=Michael Yan
 byteBuddyVersion=1.14.16
-graceVersion=2023.0.2
+graceVersion=2023.1.0-M1
 groovyVersion=4.0.23
 gormVersion=2023.1.0-M1
 hibernateCoreVersion=5.6.15.Final
